AppHeartBeatDto.toString() shows signature in Base64